fix rest framework issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\honore\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
+    "python.pythonPath": "C:\\Users\\honore\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
+    "python.terminal.activateEnvironment": true
 }
